Tests/CompilerTests/negative/no-coercion.hylo
//! no-std

trait P {}

given Void is P {}

subscript find<T where let w : T>(x: Metatype<T>) -> T { w }

extension <T is P> T {
  fun f() { let _ = find[P<T>] }
}

public fun main() {
  let x: [](Void) -> Void = Void.f
}
